# monitoring-dashboard

./: CLAUDE.md  GPU-types-by-cloud-provider-costs.csv  README.md  data-analysis.md  docker-compose.yml  ocp-all-metrics-names.json
backend/: .env.example  .gitignore  Dockerfile.dev  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260313_1432-240dffa35894_initial_schema.py  20260318_1505-d3e66dffe8ab_restart_on_18_mar.py  20260318_1733-c0b7b7232c64_add_family_memory_gb_variant_to_gpu_.py  20260318_1821-859d57d3525e_add_kebab_case_constraint_to_gpu_types_.py  20260318_1834-f9b5007f8b64_remove_model_name_from_gpu.py  20260318_1849-34ad85768b33_add_uuid_format_constraint_to_gpus.py  20260318_1913-9f351a9017ee_enforce_uuid_on_gpus.py  20260318_1941-e1fcd03a5554_add_gpu_type_relationship_to_instance_.py  20260318_1955-e76576aecaaf_instance_type_to_gpu_type.py  20260319_1013-682368304bc9_instance_type_to_gpu_count.py  20260319_1035-da43da950248_instance_type_add_instance_family.py  20260319_1313-49866e499a35_gpu_node_add_allocation.py  20260324_1158-b589236725bf_add_to_tem_details.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  startup_checks.py
backend/app/models/: __init__.py  allocation.py  allocation_type.py  cloud.py  cost_timeseries.py  gpu.py  gpu_cluster.py  gpu_node.py  gpu_type.py  instance_type.py  owner.py  team.py  workload_type.py
backend/app/schemas/: allocation.py  cloud.py  gpu.py  team.py
backend/app/services/: vm_client.py
backend/scripts/: README.md  seed_all.py  seed_reference_data.py  seed_test_data.py
backend/tests/: conftest.py
cloudability/: README.md  (+9 more)
demo/: .containerignore  .env.example  Containerfile  config.py  main.py  pyproject.toml
demo/chart/: Chart.yaml  values.yaml
demo/pages/: demo.py  history.py  home.py  live.py
demo/tests/: conftest.py  test_demo.py  test_history.py  test_live.py
frontend/: .env.example  Dockerfile.dev  main.py  pyproject.toml
frontend/app/: api_client.py  config.py
frontend/tests/: test_api_client.py
(+44 files in other folders)
