[tool.poetry]
name = "gpu-monitoring-api"
version = "0.1.0"
description = "GPU Monitoring and Allocation API with cost tracking"
authors = ["Sean Condon"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
alembic = "^1.18.4"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
python-dotenv = "^1.2.2"
httpx = "^0.28.1"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
black = "^26.3.1"
ruff = "^0.15.6"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
