[tool.poetry]
name = "gpu-monitoring-frontend"
version = "0.1.0"
description = "GPU Resource Management Dashboard"
authors = ["Sean Condon"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.0"
httpx = "^0.28.1"
pandas = "^2.2.0"
plotly = "^6.0.0"
pydantic-settings = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
